--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,9 @@ button {
   text-overflow: ellipsis;
   width: 80vw;
 }
+
+.fake-a {
+  color: #551A8B;
+  cursor: pointer;
+  text-decoration: underline;
+}
