--- a/src/app/components/dialog-add-article-case/dialog-add-article-case.component.html
+++ b/src/app/components/dialog-add-article-case/dialog-add-article-case.component.html
@@ -1,7 +1,48 @@
 <h1>Добавление статьи к делу №{{ courtCaseId }}</h1>
 <div>
-  <form [formGroup]="form"></form>
-  <button mat-flat-button color="primary" [disabled]="form.invalid">
+  <form [formGroup]="form">
+    <mat-form-field appearance="outline" class="mr-16" style="width: 100%">
+      <mat-label>Документ</mat-label>
+      <mat-select
+        [(value)]="documentId"
+        (selectionChange)="getDocument(documentId)"
+        required
+      >
+        <mat-option
+          *ngFor="let document of documents"
+          [value]="document.documentId"
+          >{{ document.fullTitle }}</mat-option
+        >
+      </mat-select> </mat-form-field
+    ><br />
+    <mat-form-field appearance="outline" class="mr-16" style="width: 100%">
+      <mat-label>Статья</mat-label>
+
+      <input
+        matInput
+        formControlName="articleId"
+        required
+        [matAutocomplete]="auto"
+      />
+      <mat-autocomplete
+        #auto="matAutocomplete"
+        [displayWith]="displayFn.bind(this)"
+      >
+        <mat-option
+          *ngFor="let article of articlesFilter | async"
+          [value]="article.articleId"
+        >
+          {{ article.title }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
+  <button
+    mat-flat-button
+    color="primary"
+    [disabled]="form.invalid || form.pristine"
+    (click)="create()"
+  >
     Добавить
   </button>
 </div>
