--- a/src/app/components/person-view/person-view.component.html
+++ b/src/app/components/person-view/person-view.component.html
@@ -1,1 +1,61 @@
-<p>person-view works!</p>
+<ng-container *ngIf="courtCases; else loader">
+  <virtual-scroller #scroll [items]="courtCases" [parentScroll]="scroll.window">
+    <div #container>
+      <div
+        class="d-flex d-flex-center mt-16"
+        *ngFor="let courtCase of scroll.viewPortItems"
+      >
+        <div class="d-flex">
+          <div class="d-flex d-flex-baseline" style="width: 100%">
+            <h2 class="m-0">№{{ courtCase.courtCaseId }}</h2>
+            <h5 class="m-0" title="Имя">
+              &nbsp;&nbsp;Тип дела:
+              <b>{{ TypeCase[courtCase.typeCase] }}</b> &nbsp;&nbsp;Вид
+              судопроизводства:
+              <b>{{ TypeLegalProceedings[courtCase.typeLegalProceedings] }}</b>
+              &nbsp;&nbsp;<ng-container
+                *ngIf="
+                  courtCase.dateProductionEnd;
+                  else dateReceiptPrimaryDocument
+                "
+                >Дата завершения дела:&nbsp;
+                <b>{{
+                  courtCase.dateProductionEnd | date: "dd.MM.y"
+                }}</b></ng-container
+              >
+              <ng-template #dateReceiptPrimaryDocument>
+                Дата поступления дела:&nbsp;<b>{{
+                  courtCase.dateReceiptPrimaryDocument | date: "dd.MM.y"
+                }}</b></ng-template
+              >
+            </h5>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <div class="d-flex">
+          <button mat-icon-button (click)="delete(courtCase.courtCaseId)">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            [routerLink]="['/courtcase/view/', courtCase.courtCaseId]"
+          >
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button
+            mat-mini-fab
+            color="accent"
+            class="ml-8"
+            [routerLink]="['/courtcase/edit/', courtCase.courtCaseId]"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+  </virtual-scroller>
+</ng-container>
+
+<ng-template #loader>
+  <mat-spinner style="margin: 5rem auto"></mat-spinner>
+</ng-template>
