--- a/src/app/components/court-cases-view/court-cases-view.component.html
+++ b/src/app/components/court-cases-view/court-cases-view.component.html
@@ -313,7 +313,7 @@
         >
           <div style="width: 100%"><span class="fake-a">Удалить</span></div>
           <div style="width: 100%">
-            {{ expertise.article.title }}
+            {{ expertise.article.title }}<br />
             Вопрос: <b>{{ expertise.question }}</b
             ><br />
             Дата заключения:
