--- a/src/app/components/person-create/person-create.component.html
+++ b/src/app/components/person-create/person-create.component.html
@@ -4,8 +4,8 @@
   <mat-form-field appearance="outline" class="mr-16">
     <mat-label>Тип лица</mat-label>
     <mat-select formControlName="isLegal">
-      <mat-option [value]="0">Физ. лицо</mat-option>
-      <mat-option [value]="1">Юр. лицо</mat-option>
+      <mat-option [value]="false">Физ. лицо</mat-option>
+      <mat-option [value]="true">Юр. лицо</mat-option>
     </mat-select>
   </mat-form-field>
 
